--- a/css/style.css
+++ b/css/style.css
@@ -577,7 +577,7 @@ strong {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background-image: url(../images/bg-theme.png);
+  /*background-image: url(../images/bg-theme.png);*/
 }
 
 .hero-background-layer {
