--- a/css/style.css
+++ b/css/style.css
@@ -714,6 +714,7 @@ strong {
   background: transparent;
   border: 1px solid rgba(255, 255, 255, 0.2);
   color: var(--white-color);
+  align-content: center;
 }
 
 .btn-outline:hover {
