--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -56,12 +56,13 @@
       <div class="footer-support-text">
         By donating to CivicTechWR, you're helping us design a better community.
       </div>
-      <a
-        class="footer-donate-btn"
-        href="https://buy.stripe.com/cN24hE161goQcZa8wx"
-        target="_blank"
-        >DONATE</a
-      >
+        <a
+          class="footer-donate-btn"
+          href="https://buy.stripe.com/cN24hE161goQcZa8wx"
+          target="_blank"
+          rel="noopener noreferrer"
+          >DONATE</a
+        >
     </div>
     <div class="footer-col footer-connect">
       <div class="footer-col-title">Get Involved</div>
@@ -104,25 +105,25 @@
         >
       </ul>
       <div class="footer-social-icons">
-        <a href="https://www.linkedin.com/company/civictechwr" target="_blank"
+        <a href="https://www.linkedin.com/company/civictechwr" target="_blank" rel="noopener noreferrer"
           ><img
             src="https://cdn.jsdelivr.net/npm/simple-icons@9.21.0/icons/linkedin.svg"
             alt="LinkedIn"
             width="18"
         /></a>
-        <a href="https://instagram.com/civictechwr" target="_blank"
+        <a href="https://instagram.com/civictechwr" target="_blank" rel="noopener noreferrer"
           ><img
             src="https://cdn.jsdelivr.net/npm/simple-icons@14.15.0/icons/instagram.svg"
             alt="Instagram"
             width="18"
         /></a>
-        <a href="https://twitter.com/civictechwr" target="_blank"
+        <a href="https://twitter.com/civictechwr" target="_blank" rel="noopener noreferrer"
           ><img
             src="https://cdn.jsdelivr.net/npm/simple-icons@14.15.0/icons/x.svg"
             alt="Twitter"
             width="18"
         /></a>
-        <a href="https://facebook.com/civictechwr" target="_blank"
+        <a href="https://facebook.com/civictechwr" target="_blank" rel="noopener noreferrer"
           ><img
             src="https://cdn.jsdelivr.net/npm/simple-icons@14.15.0/icons/facebook.svg"
             alt="Facebook"
@@ -131,18 +132,19 @@
         <a
           href="https://join.slack.com/t/civictechwr/shared_invite/zt-2hk4c93hv-DEIbxR_z1xKj8cZmayVHTw"
           target="_blank"
+          rel="noopener noreferrer"
           ><img
             src="https://cdn.jsdelivr.net/npm/simple-icons@14.15.0/icons/slack.svg"
             alt="Slack"
             width="18"
         /></a>
-        <a href="https://medium.com/civictechwr" target="_blank"
+        <a href="https://medium.com/civictechwr" target="_blank" rel="noopener noreferrer"
           ><img
             src="https://cdn.jsdelivr.net/npm/simple-icons@14.15.0/icons/medium.svg"
             alt="Medium"
             width="18"
         /></a>
-        <a href="mailto:civictechwr@gmail.com" target="_blank"
+        <a href="mailto:civictechwr@gmail.com" target="_blank" rel="noopener noreferrer"
           ><img
             src="https://cdn.jsdelivr.net/npm/simple-icons@14.15.0/icons/mailboxdotorg.svg"
             alt="Email"
