--- a/css/critical.css
+++ b/css/critical.css
@@ -136,6 +136,30 @@ p {
   transform: translateY(-2px);
 }
 
+.btn.btn-outline {
+  background: transparent !important;
+  border: 1px solid rgb(255 255 255 / 20%) !important;
+  color: var(--white-color) !important;
+  align-content: center;
+}
+
+.btn.btn-outline:hover {
+  background: rgb(255 255 255 / 10%) !important;
+  border-color: rgb(255 255 255 / 30%) !important;
+  transform: translateY(-2px);
+}
+
+.btn.custom-link {
+  background-color: var(--primary-color) !important;
+  border: none !important;
+  color: var(--white-color) !important;
+}
+
+.btn.custom-link:hover {
+  background-color: var(--secondary-color) !important;
+  color: var(--white-color) !important;
+}
+
 /* Animations */
 @keyframes fadeInUp {
   from {
