--- a/css/style.css
+++ b/css/style.css
@@ -48,11 +48,11 @@ Key Features:
   --font-weight-medium:           500;
   --font-weight-bold:             700;
   
-  /* Override Bootstrap's link color variables */
-  --bs-link-color: var(--secondary-color);
-  --bs-link-color-rgb: 45, 111, 114; /* RGB values for #2D6F72 */
-  --bs-link-hover-color: var(--primary-color);
-  --bs-link-hover-color-rgb: 252, 108, 109; /* RGB values for #FC6C6D */
+  /* Override Bootstrap's link color variables for specific components only */
+  --bs-link-color: var(--p-color);
+  --bs-link-color-rgb: 113, 114, 117; /* RGB values for #717275 */
+  --bs-link-hover-color: var(--secondary-color);
+  --bs-link-hover-color-rgb: 45, 111, 114; /* RGB values for #2D6F72 */
 }
 
 body {
@@ -129,12 +129,12 @@ button {
 
 
 a {
-  color: var(--secondary-color) !important;
+  color: var(--p-color);
   text-decoration: none;
 }
 
 a:hover {
-  color: var(--primary-color) !important;
+  color: var(--secondary-color);
   text-decoration: underline;
 }
 
@@ -773,6 +773,20 @@ a:focus {
 }
 
 .text-decoration-underline:hover {
+  color: var(--primary-color);
+}
+
+/* Links that should be teal (like navigation, important links) */
+.nav-link,
+.navbar-nav .nav-link,
+.footer-menu-list a,
+.copyright-text-wrap a {
+  color: var(--secondary-color);
+}
+
+.nav-link:hover,
+.navbar-nav .nav-link:hover,
+.footer-menu-list a:hover {
   color: var(--primary-color);
 }
 
